--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-
-<a href="./meore gverdi.html">linki</a>
-<a href="">target blank</a>
-
-
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <table>
+      <tr>
+        <th>სახელი</th>
+        <th>გვარი</th>
+        <th>ასაკი</th>
+      </tr>
+      <tr>
+        <td>მირზა</td>
+        <td>კაპანაძე</td>
+        <td>18</td>
+      </tr>
+    </table>
+  </body>
 </html>
